# mlops-recommendation-platform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/workflows/: cd.yml  ci.yml  model-retrain.yml  quality.yml
app/: main.py
app/api/: dependencies.py  middleware.py
app/api/v1/: mlflow.py  monitoring.py  recommendations.py  training.py
app/core/: __init__.py  config.py  exception.py  security.py
app/infrastructure/: aws.py  celery.py  database.py  redis.py
app/infrastructure/mlflow_server/: Dockerfile  pyproject.toml
app/models/: base.py  bookmark.py  lecture.py  search_log.py  user.py  user_preference.py
app/schemas/: __init__.py  lecture.py  recommendation.py  user.py
app/services/mlflow/: __init__.py  registry.py  tasks.py  tracking.py
app/services/monitoring/: __init__.py  prometheus.py  tasks.py
app/services/recommendation/: __init__.py  config.py  constants.py  data_loader.py  model_trainer.py  service.py  tasks.py
app/services/recommendation/repositories/: __init__.py  bookmark_repository.py  lecture_repository.py  search_log_repository.py  user_preference_repository.py  user_repository.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  secret.yaml  service.yaml
k8s/kubeflow/: pipeline.yaml
mlflow/: Dockerfile  pyproject.toml  tracking_server.py
monitoring/grafana/dashboards/: mlops-dashboard.json
monitoring/prometheus/: prometheus.yml
scripts/: init-mlflow-db.sh  wait-for-it.sh
sonarqube/: docker-compose.yml
tests/: conftest.py
