[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlops-recommendation-platform"
version = "0.1.0"
description = "FastAPI-based ALS recommendation system with MLOps"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "PyJWT>=2.8.0",
    "passlib>=1.7.4",
    "implicit>=0.7.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.28.0",
    "celery>=5.3.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
    "psutil>=5.9.0",
    "prometheus-client>=0.19.0",
    "mlflow>=2.8.0",
    "kfp>=1.8.0",
    "boto3>=1.29.0",
    "kubernetes>=28.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest-cov>=4.1.0",
    "types-passlib",
    "types-psutil",
    "scipy-stubs",
    "types-pyjwt",
    "types-boto3",
    "types-redis",
    "types-requests",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = ["E203", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=app --cov-report=xml --cov-report=html"