[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlflow_server"
version = "0.1.0"
description = "MLflow tracking server for MLOps platform"
requires-python = ">=3.11"
dependencies = [
    "mlflow[extras]>=2.8.0",
    "psycopg2-binary>=2.9.0",
    "boto3>=1.29.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]